# dhilipsiva.com

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  404.md  CNAME  Gemfile  LICENSE  Makefile  README.md  README.md~  Rakefile  _config.yml  app.py  app.py~  config.rb  config.toml  dhilipsiva.py  discover_more.html  get_in_touch.html  i_am.html  index.html  index.md  keybase.txt  new  6.txt  package-lock.json  package.json  pelicanconf.py  projects.html  publishconf.py  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  tasks.py  technologies.html  test.py  uncss.js
_assets/: config.rb
_data/: credits.yaml  dream_computer.yaml  experience.yaml  open_source.yaml  portfolio.yaml  presses.yaml  profiles.yaml  services.yaml  technologies.yaml  testimonials.yaml
_includes/: meta.html
_layouts/: default.html  job_post.html  post.html
_plugins/: bundler.rb  dhilipsiva.rb  ext.rb
_posts/: 2012-02-19-plugin-architecture-programming-using-python-tutorial.md  2012-07-24-xcode-could-not-launch-app-no-such-file-or-directory-error.md  2013-02-09-install-postgresql-on-os-x-using-homebrew.md  2013-05-19-python-libraries-django-twisted-tornado-flask-cyclone-and-pyramid.md  2014-04-20-welcome-to-jekyll.markdown  2014-04-21-test-post.md  2014-04-24-first-post-on-dhilipsiva-com.md  2014-04-25-dotfiles.md  2014-04-26-thedi-choru.md  2014-04-27-godel-escher-bach.md  2014-05-09-its-not-programming-its-parenting.md  2014-05-11-style-js.md  2014-05-12-it-isn-t-programming-its-freedom.md  2014-05-20-my-dream-gaming-machine.md  2014-06-29-i-don-t-want-to-be-an-entrepreneur.md  2014-07-07-pepper-spray-self-defence-for-ladies.md  2014-12-14-why-is-my-site-in-purple-color.md  2015-01-26-architecture-at-appknox.md  2016-10-16-upgrading-to-jekyll-3-3-0.md  (+7 more)
(+81 files in other folders)
