[tool.poetry]
name = "dhilipsiva"
version = "0.1.0"
description = "dhilipsiva"
authors = ["dhilipsiva <dhilipsiva@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
ipython = "^8.10.0"
flake8 = "^3.9.2"
pep8 = "^1.7.1"
ipdb = "^0.13.9"
black = "^21.7b0"
isort = "^5.9.2"
typogrify = "^2.0.7"
pelican = {extras = ["markdown"], version = "^4.6.0"}
invoke = "^1.6.0"
livereload = "^2.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
# Make sure this matches `*.py` in .editorconfig
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true
